Change DateTime to Date, remove company_start_date
Changed DateTime to Date in Swagger Doc to enable validation and pre-written POST fields in /ui
Modified DateTime to Date in the sqlalchemy database too and swapped fields over
Changed strptime parsing to follow new Date format from swagger
Removed team_start_date from the EmployeePost Object
Removed company_start_date in the Employee Object and replaced it with start_date for readability
Updated sqlalchemy Employee Object to also recognize start_date as their original date starting with the company
